<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily Tasks</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="default_web_client_id">1099458425964-rje1l9li3mcifa0ketqjgdmtuo7l1ndm.apps.googleusercontent.com</string>
    <string name="googlebutton">Login with Google</string>
    <string name="welcometext">Welcome to Daily Tasks!</string>
    <string name="user_profile">User Profile</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="welcome_message">Welcome to Daily Tasks</string>
    <string name="no_groups_message">No groups available</string>
    <string name="create_group">Create Group</string>
    <string name="view_groups">View Groups</string>
    <string name="invitations">Invitations</string>
    <string name="group_desc">Group description</string>
    <string name="group_name">Group name</string>
    <string name="invite_email">User e-mail</string>
    <string name="send_invitation">Send invitation</string>
    <string name="saveusername">Save username</string>
    <string name="newusername">New username</string>
    <string name="telefono">Phone number</string>
    <string name="updatedata">Update data</string>
    <string name="addmember">Add member\n</string>
    <string name="invite">Invite</string>
    <string name="seegroups">See Groups</string>
    <string name="nohaygrupos">Create or join a group!</string>
    <string name="invitation_msg">Invitation message</string>
    <string name="duedatetask">Due date</string>
    <string name="TaskDesc">Task desc</string>
    <string name="tasktitle">Task title</string>
    <string name="taskassig">Task assigned to</string>
    <string name="status">Status</string>
    <string-array name="task_status_array">
            <item>Pendiente</item>
            <item>En progreso</item>
            <item>Completada</item>
    </string-array>


</resources>