<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_gray"
    tools:context=".InviteActivity">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/invite_email"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/sendInviteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_invitation" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/button_green"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
