<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_gray"
    tools:context=".UserProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Nombre"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Email"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Spinner
        android:id="@+id/spinnerAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/button_green"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/button_green"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:background="@color/button_green"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextNewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/newusername"
        android:background="@color/button_green"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonUpdateUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/saveusername"
        android:backgroundTint="@color/button_green"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/updatedata"
        android:backgroundTint="@color/button_green"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonSignOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/logout"
        android:backgroundTint="@color/red"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/button_green"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
